--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </div>
                             <div class="contact-text">
                                 <h4>Orari</h4>
-                                <p>Lun-Sab: 8:00 - 20:00<br>Domenica: 9:00 - 13:00 / 16:00 - 20:00</p>
+                                <p>Lun-Sab: 8:00-13:00, 15:30-20:00<br>Dom: 16:00-20:00</p>
                             </div>
                         </div>
                         
