--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <!-- Test deploy automatico GitHub-Netlify -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cioccolateria Calvani - Terni | Cioccolato Artigianale & Gelato</title>
